...
                }
            }
        }
    }
}

internal const val APP_THEME_SURFACE_TAG = "app_theme_surface"

internal val LIGHT_NAVIGATION_BAR_SCRIM = 0xE6FFFFFF.toInt()
internal val DARK_NAVIGATION_BAR_SCRIM = 0x801B1B1B.toInt()

